--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             height: 150px;
             border-radius: 50%;
             margin: 20px auto;
-            background: url('assets/downhillFinance.jpg') no-repeat center/cover;
+            background: url('asset/downhillFinance.jpg') no-repeat center/cover;
             box-shadow: 0 4px 8px rgba(255, 255, 255, 0.3);
         }
 
@@ -106,14 +106,14 @@
     <p>Your Personal Description or Tagline Goes Here</p>
 
     <div class="links">
-        <a href="https://www.sleeper.com" target="_blank">
-            <img src="assets/sleeper.jpg" alt="Sleeper Logo"> Sleeper
+        <a href="https://sleeper.com/promo/RF-PRNZL791113" target="_blank">
+            <img src="asset/sleeper.jpg" alt="Sleeper Logo"> Sleeper
         </a>
-        <a href="https://www.underdogfantasy.com" target="_blank">
-            <img src="assets/underdog.webp" alt="Underdog Logo"> UnderDog
+        <a href="https://play.underdogfantasy.com/prnzl" target="_blank">
+            <img src="asset/underdog.webp" alt="Underdog Logo"> UnderDog
         </a>
-        <a href="https://www.prizepicks.com" target="_blank">
-            <img src="assets/prizepicks.png" alt="PrizePicks Logo"> PrizePicks
+        <a href="https://app.prizepicks.com/sign-up?invite_code= PR-MHMXWQL" target="_blank">
+            <img src="asset/prizepicks.png" alt="PrizePicks Logo"> PrizePicks
         </a>
     </div>
 </body>
