--- a/index.html
+++ b/index.html
@@ -103,17 +103,18 @@
         <a href="#" target="_blank">F</a>
     </div>
 
-    <p>Your Personal Description or Tagline Goes Here</p>
+    <p>Let's make some BAGG💰💰💰</p>
+    <p>Codes should automatically apply but make sure to add them to get the best available bonuses.</p>
 
     <div class="links">
         <a href="https://sleeper.com/promo/RF-PRNZL791113" target="_blank">
             <img src="asset/sleeper.jpg" alt="Sleeper Logo"> Sleeper
         </a>
         <a href="https://play.underdogfantasy.com/prnzl" target="_blank">
-            <img src="asset/underdog.webp" alt="Underdog Logo"> UnderDog
+            <img src="asset/underdog.webp" alt="Underdog Logo"> UnderDog - CODE prnzl
         </a>
         <a href="https://app.prizepicks.com/sign-up?invite_code= PR-MHMXWQL" target="_blank">
-            <img src="asset/prizepicks.png" alt="PrizePicks Logo"> PrizePicks
+            <img src="asset/prizepicks.png" alt="PrizePicks Logo"> PrizePicks - CODE PR-MHMXWQL
         </a>
     </div>
 </body>
