--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Beat The Sys4</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
@@ -29,7 +29,7 @@
             height: 150px;
             border-radius: 50%;
             margin: 20px auto;
-            background: url('asset/downhillFinance.jpg') no-repeat center/cover;
+            background: url('assets/pfp') no-repeat center/cover;
             box-shadow: 0 4px 8px rgba(255, 255, 255, 0.3);
         }
 
@@ -52,6 +52,11 @@
             color: #4fc3f7;
             font-size: 1.2em;
             transition: background 0.3s;
+        }
+
+        .social-icons a img {
+            width: 24px;
+            height: 24px;
         }
 
         .social-icons a:hover {
@@ -97,10 +102,9 @@
     <div class="profile-pic"></div>
 
     <div class="social-icons">
-        <a href="#" target="_blank">T</a>
-        <a href="#" target="_blank">I</a>
-        <a href="#" target="_blank">Y</a>
-        <a href="#" target="_blank">F</a>
+        <a href="https://www.tiktok.com/@beatthesys4" target="_tiktokProfile">
+            <img src="asset/tiktok" alt="TikTok Logo">
+        </a>
     </div>
 
     <p>Let's make some BAGG💰💰💰</p>
