--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <div class="social-icons">
         <a href="https://www.tiktok.com/@beatthesys4" target="_tiktokProfile">
-            <img src="asset/tiktok" alt="TikTok Logo">
+            <img src="asset/tiktok.png" alt="TikTok Logo">
         </a>
     </div>
 
