--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             height: 150px;
             border-radius: 50%;
             margin: 20px auto;
-            background: url('assets/pfp') no-repeat center/cover;
+            background: url('asset/downhillFinance.jpg') no-repeat center/cover;
             box-shadow: 0 4px 8px rgba(255, 255, 255, 0.3);
         }
 
