--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <div class="links">
         <a href="https://sleeper.com/promo/RF-PRNZL791113" target="_blank">
-            <img src="asset/sleeper.jpg" alt="Sleeper Logo"> Sleeper
+            <img src="asset/sleeper.jpg" alt="Sleeper Logo"> Sleeper - CODE RF-PRNZL791113
         </a>
         <a href="https://play.underdogfantasy.com/prnzl" target="_blank">
             <img src="asset/underdog.webp" alt="Underdog Logo"> UnderDog - CODE prnzl
